<resources>
    <string name="app_name">Tabs example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">First fragment</string>
    <string name="second_fragment">Second fragment</string>
    <string name="third_fragment">Third fragment</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="settings">Settings</string>
    <string name="controls">Controls</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="enter_the_song_name">Enter the song name</string>
    <string name="enter_the_movie_name">Enter the movie name</string>
    <string name="enter_singer">Enter singer</string>
    <string name="enter_duration_of_the_song">Enter duration of the song</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="search_a_song">Search a song</string>
    <string name="enter_the_singer_name">Enter the singer name</string>
    <string name="done">Done</string>
    <string name="hi">hi</string>
</resources>