<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_action_name"
            />
        <item
            android:id="@+id/work"
            android:title="@string/work"
            android:icon="@drawable/ic_action_work"
            />
    </group>

    <item android:title="@string/controls">
        <menu>
            <item
                android:id="@+id/setting"
                android:title="@string/settings"
                android:icon="@drawable/ic_action_setting"
                />
            <item
                android:id="@+id/work1"
                android:title="@string/work"
                android:icon="@drawable/ic_action_logout"
                />
        </menu>
    </item>
</menu>